--- a/posts/2018-03-07-sucesu-rs.md
+++ b/posts/2018-03-07-sucesu-rs.md
@@ -3,6 +3,7 @@ date: 2018-03-07
 title: "GUTS-RS: GUTS Talks - 07/03/2018"
 description: "Palestras de curta duração e uma sessão de perguntas e respostas como encerramento, para proporcionar a troca de conhecimento e experiência entre todos os participantes."
 category: "evento"
+image: '/assets/img/cover.png'
 ---
 
 O [GUTS Talks](http://guts-rs.blogspot.com/) é um evento com formato diferenciado: palestras de curta duração (20 min cada) e uma sessão de perguntas e respostas como encerramento, para proporcionar a troca de conhecimento e experiência entre todos os participantes.
