--- a/posts/2020-08-08-learn-css.md
+++ b/posts/2020-08-08-learn-css.md
@@ -28,7 +28,7 @@ Criado por Luke Pacholski, você escreve o código com o objetivo de selecionar 
 
 ![CSS Diner](/assets/img/cssdiner.png)
 
-- <a href="http://www.flexboxdefense.com/" target="_blank" rel="noopener noreferrer"></a>
+- <a href="http://www.flexboxdefense.com/" target="_blank" rel="noopener noreferrer">Flexbox Defense</a>
 
 Criado por Channing Allen, seu objetivo é impedir que os inimigos que se aproximam ultrapassem suas defesas. Ao contrário de outros jogos de defesa de torre, você deve posicionar suas torres usando CSS! Foco no Flexbox.
 
