--- a/posts/2021-05-05-date-diff.md
+++ b/posts/2021-05-05-date-diff.md
@@ -1,7 +1,7 @@
 ---
 date: 2021-05-05
 title: "Diferença entre datas"
-description: "Dias, horas, minutos e Milissegundos"
+description: "Dias, horas, minutos e segundos"
 category: "Javascript"
 image: "/assets/img/cover.png"
 ---
@@ -23,7 +23,7 @@ class DateDiff {
     getDiffDays = () => Math.round(Math.abs((this.firstDate - this.secondDate) / this.oneDay));
     getDiffHour = () => Math.round(Math.abs((this.firstDate - this.secondDate) / this.oneHour));
     getDiffMinute = () => Math.round(Math.abs((this.firstDate - this.secondDate) / this.oneMinute));
-    getDiffMillisecond = () => Math.round(Math.abs((this.firstDate - this.secondDate) / this.oneMillisecond));
+    getDiffSecond = () => Math.round(Math.abs((this.firstDate - this.secondDate) / this.oneMillisecond));
 
 }
 
@@ -34,7 +34,7 @@ const test1 = new DateDiff(firstDate, secondDate);
 console.log(test1.getDiffDays()); // 1
 console.log(test1.getDiffHour()); // 24
 console.log(test1.getDiffMinute()); // 1440
-console.log(test1.getDiffMillisecond()); // 86400
+console.log(test1.getDiffSecond()); // 86400
 
 // teste 2
 const firstDate2 = new Date("2021-05-05 21:00:00");
@@ -43,7 +43,7 @@ const test2 = new DateDiff(firstDate2, secondDate2);
 console.log(test2.getDiffDays()); // 0
 console.log(test2.getDiffHour()); // 1
 console.log(test2.getDiffMinute()); // 60
-console.log(test2.getDiffMillisecond()); // 3600
+console.log(test2.getDiffSecond()); // 3600
 
 // teste 3
 const firstDate3 = new Date("2021-05-05 21:00:00");
@@ -52,7 +52,7 @@ const test3 = new DateDiff(firstDate3, secondDate3);
 console.log(test3.getDiffDays()); // 0
 console.log(test3.getDiffHour()); // 0
 console.log(test3.getDiffMinute()); // 2
-console.log(test3.getDiffMillisecond()); // 120
+console.log(test3.getDiffSecond()); // 120
 
 // teste 4
 const firstDate4 = new Date("2021-05-05 21:00:00");
@@ -61,7 +61,7 @@ const test4 = new DateDiff(firstDate4, secondDate4);
 console.log(test4.getDiffDays()); // 0
 console.log(test4.getDiffHour()); // 0
 console.log(test4.getDiffMinute()); // 0
-console.log(test4.getDiffMillisecond()); // 2
+console.log(test4.getDiffSecond()); // 2
 ```
 
 
