--- a/posts/2023-11-15-att-yarn.md
+++ b/posts/2023-11-15-att-yarn.md
@@ -12,7 +12,7 @@ npm i -g corepack
 corepack enable
 ```
 
-**Instale o Yarn**
+**Atualize o Yarn**
 ```bash
 yarn cache clean # Limpe os possíveis caches caso os tenha
 yarn set version latest
